CHANGES IN VERSION 1.4.1
------------------------
 o catch error when windows throw no permission in reading alignment result <2014-12-16, Tue>
 o setNGS_ method for NGS object initial <2014-12-15, Mon>

CHANGES IN VERSION 1.4.0
------------------------
 o NGS class with toNGS constructor and
   getPosition and getSite functions to access
   N-glycosylation site info <2014-12-14, Sun>
 
CHANGES IN VERSION 1.3.4
------------------------
 o subtype in summary separate by | <2014-12-05, Fri>
 o add Mixed column in summary output <2014-12-05, Fri>
 o generateGapFile is now compatible with readFilename that contains duplicated record. <2014-12-03, Wed>
 o mergePhy function for merging two phylip files <2014-12-04, Thu>

CHANGES IN VERSION 1.3.3
------------------------
 o random say by says function <2014-12-03, Wed>
 o fixed in testing ambiguous location range between [10, length(x)-10] <2014-12-02, Tue>

CHANGES IN VERSION 1.3.2
------------------------
 o fixed in get ID that start with RL\\dGeneName_ <2014-12-02, Tue>

CHANGES IN VERSION 1.3.1
------------------------
 o change test of NA in generateGapFile function. <2014-12-02, Tue>

CHANGES IN VERSION 1.3.0
------------------------
 o change gene order in summarize function <2014-12-01, Mon>
 
CHANGES IN VERSION 1.2.9
------------------------
 o markAmbiguous in autoReport <2014-11-28, Fri>
 o import operator %>% from magrittr <2014-11-27, Thu>

CHANGES IN VERSION 1.2.8
------------------------
 o add catSay in summarize <2014-11-27, Thu>
 o add summarize function to summarize the output <2014-11-27, Thu>
 o fas2phy for converting fasta to phylip format <2014-11-27, Thu>

CHANGES IN VERSION 1.2.7
------------------------
 o fixed in generate mixed and un-mixed table <2014-11-26, Wed>

CHANGES IN VERSION 1.2.5
------------------------
 o remove X or - in comparison <2014-11-24, Mon>

CHANGES IN VERSION 1.2.4
------------------------
 o add pmlToSeq function <2014-11-24, Mon>

CHANGES IN VERSION 1.2.3